@@ -38,3 +38,5 @@ panel-typebuiltins.h
 libpanelapplet-2.0.pc
 test-applet
 test-bonobo-applet
+gnome-panel-screenshot
+gnome-panel-screenshot.glade2
