@@ -1,3 +1,13 @@
+2002-01-04  Glynn Foster  <glynn.foster@sun.com>
+
+	* .cvsignore: GAG and lock in dark room
+	
+	* panel-gconf.c, panel-gconf.h: Some new convenience code
+	for launcher loading.
+	* panel-per-panel-config.schemas: Some new default launchers to
+	load - still very much work in progress.
+	* session.c: Remove use of old conditional code.
+
 2002-01-04  Mark McLoughlin  <mark@skynet.ie>
 
 	* panel-applet-frame.c:
