@@ -1,3 +1,7 @@
+2002-01-04  Glynn Foster  <glynn.foster@sun.com>
+
+	* panel-applet-gconf.h: Remove include of ghash.h. Not needed.
+
 2002-01-04  Mark McLoughlin  <mark@skynet.ie>
 
 	* panel-applet.c: (panel_applet_factory_main_closure),
